# name-generator

./: .gitignore  README.md  SETUP.md  pyproject.toml
examples/: __init__.py  basic_usage.py  llm_validation.py
src/name_generator/: __init__.py  data_loader.py  generator.py  llm_validator.py
tests/: __init__.py  test_generator.py
