[project]
name = "name-generator"
version = "0.1.0"
description = "Ethnically diverse name generator using voter file datasets"
readme = "README.md"
authors = [
    { name = "James M. Tucker", email = "james.tucker@datavant.com" }
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
name-generator = "name_generator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
